# zee

./: .gitignore  ARCHITECTURE.en.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  RESEARCH.en.md  RESEARCH.md  SECURITY.md  STARTER_GUIDE.en.md  STARTER_GUIDE.md  action.yml  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: test.yml
docs/: business_guide.html  gate.md  index.html  threat-list.md
docs/maintenance/: README.md  linux_systemd_update.md  mac_launchd_update.md  python_version_bump.md  windows_service_update.md
examples/: Dockerfile.linux-smoke  assets.example.toml  assets.example.yaml  demo_dry_run.py  integration_smoke.py  seed_demo_decoys.py
src/zee/: __init__.py  cli.py  errors.py  events.py
src/zee/config/: __init__.py  schema.py
src/zee/decoy/: __init__.py  canary_token.py  seeder.py
src/zee/gate/: __init__.py  adapters.py  audit.py  denylist.json  denylist.py  fetch.py  imports.py  inspector.py  model.py  pins.py  scorer.py  static_checks.py
src/zee/gate/sandbox/: __init__.py  backends.py  decoys.py  netsink.py  profile.py  runner.py
src/zee/mcp/: __init__.py  audit.py  config.py  reader.py  server.py
src/zee/notifier/: __init__.py  local.py  webhook.py
src/zee/policy/: __init__.py  allowlist.py  asset_profile.py  default_allowlist.py
src/zee/recovery/: __init__.py  auth.py  restore.py
src/zee/responder/: __init__.py  cut_egress.py  cut_full.py  sequence.py
src/zee/telemetry/: __init__.py  capability_report.py  cut_state.py  events_log.py  status.py
src/zee/watcher/: __init__.py  backend_linux.py  backend_macos.py  backend_windows.py  base.py
tests/: test_allowlist.py  test_canary_token.py  test_config_load.py  test_cut_state.py  test_default_allowlist.py  test_duplicate_decoy.py  test_event_routing.py  test_gate.py  test_gate_ecosystem.py  test_gate_pins.py  test_gate_sandbox.py  test_gatekeeper_block.py  test_mcp.py  test_op_class_gate.py  test_policy_resolution.py  test_restore_auth.py  test_seeder_canary.py  test_status.py  test_watcher_macos.py  test_webhook.py  test_webhook_async.py  test_windows_iface_enumeration.py
