[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zee"
version = "0.7.0"
description = "Lightweight decoy tripwire and post-intrusion containment layer."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Hiroki Kamanoi" }]
keywords = ["security", "deception", "tripwire", "post-intrusion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.0"]
# Optional MCP layer (read-only + propose-only). Core stays dependency-free.
# Pinned below 2.0: the SDK's v2 renames the server class (FastMCP ->
# MCPServer), so we cap the major to keep zee.mcp.server importable.
mcp = ["mcp>=1.0,<2"]

[project.scripts]
zee = "zee.cli:main"

[project.urls]
Homepage = "https://kamanoi.github.io/zee/"
Repository = "https://github.com/KAMANOI/zee"
Issues = "https://github.com/KAMANOI/zee/issues"
Changelog = "https://github.com/KAMANOI/zee/blob/main/CHANGELOG.md"
Documentation = "https://github.com/KAMANOI/zee#readme"
Sponsor = "https://github.com/sponsors/KAMANOI"
"Security Advisories" = "https://github.com/KAMANOI/zee/security/advisories"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
"zee.gate" = ["denylist.json"]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
